Add: listener on enterkey at login